--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
   </head>
   <body>
-    <div class="w-full min-h-full">
+    <div class="min-w-full min-h-screen">
       <app-root></app-root>
     </div>
   </body>
